force-app/main/default/objects/Bank_Master__c/Bank_Master__c.object-meta.xml
<CustomObject>
    <label>Bank Master</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>