force-app/main/default/objects/Bank_Master__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>