force-app/main/default/objects/Bank_Master__c/fields/First_3_digit_of_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>First_3_digit_of_Account_Number__c</fullName>
    <label>First 3 digit of Account Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>